--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 8000:8000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
+      - /mediaserver/appdata/portainer:/data
 
   jackett:
     image: linuxserver/jackett
@@ -18,7 +18,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
+      - TZ=Australia/Adelaide
       - AUTO_UPDATE=true #optional
     volumes:
       - /mediaserver/appdata:/config
@@ -33,7 +33,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
+      - TZ=Australia/Adelaide
       - UMASK_SET=022 #optional
     volumes:
       - /mediaserver/appdata/radarr:/config
@@ -49,7 +49,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
+      - TZ=Australia/Adelaide
       - UMASK_SET=022 #optional
     volumes:
       - /mediaserver/appdata/sonarr:/config
@@ -65,7 +65,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
+      - TZ=Australia/Adelaide
       - UMASK_SET=022
       - WEBUI_PORT=8080
     volumes:
@@ -97,12 +97,9 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
+      - TZ=Australia/Adelaide
     volumes:
       - /mediaserver/appdata/ombi:/config
     ports:
       - 3579:3579
     restart: unless-stopped
-
-volumes:
-  portainer_data:
